k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forecasting-mrp
  labels:
    app.kubernetes.io/part-of: forecasting-mrp
